(succesvolle) gulp starterpack

--- a/src/ui/_vars.scss
+++ b/src/ui/_vars.scss
@@ -1,9 +1,18 @@
-$background-color: #ccc;
-$border-color: #aaa;
-$text-color: #222;
-$font-family: sans-serif;
+$fontInterstate: interstate;
+$fontInterstatelight: interstatelight;
 
-$header-height: 70px;
+$h1TextSize: 30px;
+$h2TextSize: 25px;
+$h3_p_TextSize: 16px;
+$pLineHeight: 1.4;
+$paddingTextLeft: 20px;
+$marginTop: 10px 0px 0px 0px;
+$marginBottom: 0px 0px 10px 0px;
+$marginTopBottomDouble: 25px 0px 20px 0px;
+$marginTopTripple: 40px 0px 0px 0px;
+$marginNone: 0px 0px 0px 0px;
+$marginbutton: 25px 0px 20px 20px;
+$marginUl: 4px 0px 0px 0px;
 
-$padding-small: 10px;
-$padding-large: 20px;
+$pink: #f4bbbb;
+$pinkSeeTrough: #f4bbbb85;
