commenten van de vorige vars

--- a/src/ui/_vars.scss
+++ b/src/ui/_vars.scss
@@ -1,18 +1,18 @@
-$fontInterstate: interstate;
-$fontInterstatelight: interstatelight;
+// $fontInterstate: interstate;
+// $fontInterstatelight: interstatelight;
 
-$h1TextSize: 30px;
-$h2TextSize: 25px;
-$h3_p_TextSize: 16px;
-$pLineHeight: 1.4;
-$paddingTextLeft: 20px;
-$marginTop: 10px 0px 0px 0px;
-$marginBottom: 0px 0px 10px 0px;
-$marginTopBottomDouble: 25px 0px 20px 0px;
-$marginTopTripple: 40px 0px 0px 0px;
-$marginNone: 0px 0px 0px 0px;
-$marginbutton: 25px 0px 20px 20px;
-$marginUl: 4px 0px 0px 0px;
+// $h1TextSize: 30px;
+// $h2TextSize: 25px;
+// $h3_p_TextSize: 16px;
+// $pLineHeight: 1.4;
+// $paddingTextLeft: 20px;
+// $marginTop: 10px 0px 0px 0px;
+// $marginBottom: 0px 0px 10px 0px;
+// $marginTopBottomDouble: 25px 0px 20px 0px;
+// $marginTopTripple: 40px 0px 0px 0px;
+// $marginNone: 0px 0px 0px 0px;
+// $marginbutton: 25px 0px 20px 20px;
+// $marginUl: 4px 0px 0px 0px;
 
-$pink: #f4bbbb;
-$pinkSeeTrough: #f4bbbb85;
+// $pink: #f4bbbb;
+// $pinkSeeTrough: #f4bbbb85;
