--- a/src/ui/styles.scss
+++ b/src/ui/styles.scss
@@ -6,4 +6,4 @@
 
 // @import url(//db.onlinewebfonts.com/c/5d7571268a2cc4dcdd56140df04d77d0?family=InterstateLight);
 
-// @import "personalInfo";
+@import "header";
