--- a/src/ui/_vars.scss
+++ b/src/ui/_vars.scss
@@ -1,5 +1,6 @@
 // header
-$headerButtonTextSize: 20px;
+$headerButtonTextSize: 18px;
+$headerPadding: 30px 150px 30px 150px;
 
 // colors
 $darkBlue: #242657;
