--- a/src/ui/_header.scss
+++ b/src/ui/_header.scss
@@ -5,6 +5,10 @@ header {
   padding: $headerPadding;
 }
 
+.logo {
+  margin: 0px 40px 0px 0px;
+}
+
 .headerButton {
   color: $darkBlue;
   font-size: $headerButtonTextSize;
