--- a/src/ui/_vars.scss
+++ b/src/ui/_vars.scss
@@ -9,3 +9,6 @@ $lightBlue: #e1e7f0;
 $shadowBlue: rgba(55, 84, 170, 0.171);
 $white: #ffffff;
 $accentBlue: #2e73d9;
+
+//watches-container
+$watches-container-margin: 40px;
