--- a/src/ui/_header.scss
+++ b/src/ui/_header.scss
@@ -1,8 +1,10 @@
 @import "./vars";
+@import url("https://fonts.googleapis.com/css?family=Barlow&display=swap");
 
 header {
   background: $lightBlue;
   padding: $headerPadding;
+  filter: drop-shadow(0px 5px 10px rgba(55, 84, 170, 0.171));
 }
 
 .logo {
@@ -16,6 +18,7 @@ header {
   margin: 0px 20px 0px 0px;
   border: none;
   background-color: $lightBlue;
+  font-family: "Barlow", sans-serif;
 }
 
 // .headerButton:focus {
