--- a/src/ui/styles.scss
+++ b/src/ui/styles.scss
@@ -1,15 +1,20 @@
 @import "./vars";
 
-// @import url(//db.onlinewebfonts.com/c/4724e6235ecb66e8330a90b545236592?family=Interstate);
-
-// @import url(//db.onlinewebfonts.com/c/076a573a702ec65cfb1f69588b89f12a?family=InterstateBold);
-
-// @import url(//db.onlinewebfonts.com/c/5d7571268a2cc4dcdd56140df04d77d0?family=InterstateLight);
-
 body {
   margin: 0px;
+  background-color: #e1e7f0;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  margin: 0px 150px;
 }
 
 @import "header";
 
 @import "pop-up";
+
+@import "filters-container";
+
+@import "watches-container";
