fonts-fam toegevoegd aan watch-container, 'darken' effect op img

--- a/src/ui/_vars.scss
+++ b/src/ui/_vars.scss
@@ -10,5 +10,10 @@ $shadowBlue: rgba(55, 84, 170, 0.171);
 $white: #ffffff;
 $accentBlue: #2e73d9;
 
+//fonts
+$main-font: "Barlow", sans-serif;
+
 //watches-container
 $watches-container-margin: 40px;
+$watch-name-font-size: 20px;
+$watch-prize-font-size: 18px;
