watch-container filter fix

--- a/src/ui/_watches-container.scss
+++ b/src/ui/_watches-container.scss
@@ -8,18 +8,24 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 90px;
+  padding: 20px;
 }
 
 .watch-container {
-  border: 2px solid blue;
   padding: 35px 0px 10px 0px;
   border-radius: 20px;
   background: $lightBlue;
+  filter: drop-shadow(10px 10px 10px $shadowBlue);
+}
+
+.watch-container-extra-filter {
+  filter: drop-shadow(-10px -10px 10px $white);
 }
 
 .img-watch {
   width: 100%;
   mix-blend-mode: darken;
+  border: none;
 }
 
 .watch-name {
