checkboxes custom gemaakt, want styling is niet simpel op de build in checkboxes

--- a/src/ui/_vars.scss
+++ b/src/ui/_vars.scss
@@ -1,5 +1,5 @@
 // header
-$headerButtonTextSize: 18px;
+$headerButtonTextSize: 16px;
 $headerPadding: 20px 150px 20px 150px;
 
 // colors
@@ -17,3 +17,6 @@ $main-font: "Barlow", sans-serif;
 $watches-container-margin: 40px;
 $watch-name-font-size: 18px;
 $watch-prize-font-size: 16px;
+
+//filter-container
+$filter-label-name-size: 14px;
