--- a/src/ui/_filters-container.scss
+++ b/src/ui/_filters-container.scss
@@ -5,4 +5,60 @@
   border: 2px solid red;
   width: 20%;
   height: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.checkbox-and-label {
+  margin: 4px 0px 0px 0px;
+}
+
+//custom checkbox
+
+.styled-checkbox {
+  position: absolute; // zodat vinkje er niet voor zorgt dat box opschuift
+  opacity: 0; // verstoppen pre check
+
+  & + label {
+    position: relative;
+    cursor: pointer;
+    padding: 0;
+    font-family: $main-font;
+    font-size: $filter-label-name-size;
+  }
+
+  // Unchecked box
+  & + label:before {
+    content: ""; // content is nu nog leeg, want ongeklikt met witte achtergrond
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: text-top;
+    width: 13px;
+    height: 13px;
+    // background: $lightBlue;
+    border: 2px solid $grey;
+    border-radius: 3px;
+    filter: drop-shadow(3px 3px 2px $shadowBlue);
+  }
+
+  // Hover box
+  &:hover + label:before {
+    border: 2px solid $accentBlue;
+  }
+
+  // Checked box
+  &:checked + label:before {
+    // background: $lightBlue;
+  }
+
+  // V
+  &:checked + label:after {
+    content: "";
+    position: absolute;
+    left: 4px;
+    top: 4px;
+    background: $grey;
+    width: 9px;
+    height: 9px;
+  }
 }
