--- a/src/ui/_vars.scss
+++ b/src/ui/_vars.scss
@@ -6,6 +6,7 @@ $headerPadding: 20px 150px 20px 150px;
 $darkBlue: #242657;
 $grey: #516076;
 $lightBlue: #e1e7f0;
+$lightBlueSlightlyDarker: #d6dde7;
 $shadowBlue: rgba(55, 84, 170, 0.171);
 $white: #ffffff;
 $accentBlue: #2e73d9;
