--- a/src/ui/styles.scss
+++ b/src/ui/styles.scss
@@ -8,7 +8,7 @@ body {
 main {
   display: flex;
   flex-direction: row;
-  margin: 0px 150px;
+  margin: 40px 150px 0px 150px;
 }
 
 @import "header";
