--- a/src/ui/_watches-container.scss
+++ b/src/ui/_watches-container.scss
@@ -71,12 +71,14 @@
   filter: drop-shadow(6px 6px 5px $shadowBlue);
   //alignment in grid zie extra filter class .add-to-cart-button-extra-filter
 
-  & img {
+  img {
     mix-blend-mode: darken;
-  }
+    transform-origin: 50% 50%;
+    transform: translate(-2px, 1px);
 
-  & img:hover {
-    -webkit-animation: pulse 0.5s ease infinite alternate;
+    &:hover {
+      -webkit-animation: rideBy 0.5s ease infinite alternate;
+    }
   }
 
   &:hover {
@@ -105,12 +107,15 @@
 
 //animations
 
-@-webkit-keyframes pulse {
-  from {
-    transform: scale(1, 1);
+@-webkit-keyframes rideBy {
+  0% {
+    transform: translate(-2px, 1px);
   }
-  to {
-    transform: scale(1.2, 1.2);
+  50% {
+    transform: translate(2px, 1px);
+  }
+  100% {
+    transform: translate(-4px, 1px);
   }
 }
 
