--- a/src/ui/_filters-container.scss
+++ b/src/ui/_filters-container.scss
@@ -2,11 +2,12 @@
 @import url("https://fonts.googleapis.com/css?family=Barlow&display=swap");
 
 .filters-container {
-  border: 2px solid red;
+  // border: 2px solid red;
   width: 20%;
   height: auto;
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
 }
 
 .checkbox-and-label {
