search box afgewerkt

--- a/src/ui/_header.scss
+++ b/src/ui/_header.scss
@@ -5,6 +5,14 @@ header {
   background: $lightBlue;
   padding: $headerPadding;
   filter: drop-shadow(0px 5px 10px rgba(55, 84, 170, 0.171));
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo-plus-navigator-tabs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
@@ -21,6 +29,63 @@ header {
   font-family: "Barlow", sans-serif;
 }
 
-// .headerButton:focus {
-//   outline: 0;
-// }
+.my-shopping-cart-header {
+  mix-blend-mode: darken;
+}
+
+//search box!!!
+
+.searchContainer {
+  display: inline-flex;
+  flex: 1 1 300px;
+  position: relative;
+  border: 1px solid $grey;
+  border-radius: 10px;
+  overflow: hidden;
+
+  .searchBox {
+    border: 0;
+    padding: 5px;
+    flex: 1;
+    background-color: $lightBlue;
+    outline: none;
+    font-size: 15px;
+    font-family: $main-font;
+    color: $darkBlue;
+  }
+
+  .searchButton {
+    background: $grey;
+    border: 0;
+    color: $lightBlue;
+    padding: 5px;
+    font-size: 14px;
+    font-family: $main-font;
+    outline: none;
+
+    &:hover {
+      background: $white;
+      color: $grey;
+    }
+
+    &:active {
+      background: $accentBlue;
+      color: $white;
+    }
+  }
+
+  .searchBox::placeholder {
+    color: $darkBlue;
+    font-size: 15px;
+    font-family: $main-font;
+  }
+
+  .fa-search {
+    color: $grey;
+    margin: 6px 6px 5px 6px;
+  }
+
+  &:hover {
+    border: 1px solid $white;
+  }
+}
