--- a/src/ui/_vars.scss
+++ b/src/ui/_vars.scss
@@ -1,5 +1,6 @@
 // header
 $headerButtonTextSize: 16px;
+
 $headerPadding: 20px 150px 20px 150px;
 
 // colors
@@ -21,3 +22,6 @@ $watch-prize-font-size: 16px;
 
 //filter-container
 $filter-label-name-size: 14px;
+
+// search container
+$search-container-padding: 5px 150px 5px 150px;
