header position fixed, sidebar, position sticky, alles scrollt nu mooi

--- a/src/ui/_filters-container.scss
+++ b/src/ui/_filters-container.scss
@@ -4,10 +4,13 @@
 .filters-container {
   // border: 2px solid red;
   width: 20%;
-  height: auto;
   display: flex;
   flex-direction: column;
   margin-top: 20px;
+  margin: 150px 0px 0px 0px;
+  position: sticky;
+  height: 200px;
+  top: 150px;
 }
 
 .checkbox-and-label {
