--- a/src/ui/_header.scss
+++ b/src/ui/_header.scss
@@ -2,6 +2,11 @@
 @import url("https://fonts.googleapis.com/css?family=Barlow&display=swap");
 
 header {
+  position: fixed;
+  z-index: 999;
+}
+
+.logo-plus-navigator-tabs-container {
   background: $lightBlue;
   padding: $headerPadding;
   filter: drop-shadow(0px 5px 10px rgba(55, 84, 170, 0.171));
