--- a/src/ui/_filters-container.scss
+++ b/src/ui/_filters-container.scss
@@ -4,8 +4,7 @@
 .filters-container {
   // border: 2px solid red;
   width: 20%;
-  display: flex;
-  flex-direction: column;
+  @include flexColumn();
   margin-top: 20px;
   margin: 150px 0px 0px 0px;
   position: sticky;
@@ -16,8 +15,7 @@
 .radioButton-and-label,
 .checkbox-and-label {
   margin: 4px 0px 0px 0px;
-  display: flex;
-  flex-direction: row;
+  @include flexRow();
 }
 
 h4 {
